modules/cli/src/test/resources/good/misc/globals/gdo/Do17.scr
module good.misc.globals.gdo.Do17;


global protocol Do17(role A, role B)
{
	do Do17a<l1(), l2()>(A, B);
	//do Do17a<l1(), l1()>(A, B);  // Uncomment is bad
}

global protocol Do17a<sig X, sig Y>(role C, role D)
{
	choice at C
	{
		X from C to D;
	}
	or
	{
		Y from C to D;
	}
}

