modules/cli/src/test/resources/bad/wfchoice/oldwfchoice/globals/gchoice/Choice08.scr
module bad.wfchoice.oldwfchoice.gchoice.Choice08;


global protocol Choice8(role A, role B, role C)
{
	choice at A
	{
		l1() from A to B;
		l2() from B to C;
		////l4() from C to A;  // Uncomment makes it OK
	}
	or
	{
		l2() from A to B;
		////l1() from B to C;  // Comment is bad
		l2() from B to C;
		//l4() from C to A;
	}
	l2() from C to A;
}

